footer spacing fixed

--- a/css/machinanewux.css
+++ b/css/machinanewux.css
@@ -468,6 +468,10 @@ body {
   flex: 1;
 }
 
+.footerlogo {
+  max-width: 60%;
+}
+
 .herosection {
   height: auto;
 }
